@@ -57,6 +57,32 @@ TextualInputPort::~TextualInputPort()
 {
 }
 
+Object TextualInputPort::position() const
+{
+    // caller should check hasPosition().
+    MOSH_ASSERT(false);
+    return Object::Undef;;
+}
+
+bool TextualInputPort::setPosition(int position)
+{
+    // caller should check hasPosition().
+    MOSH_ASSERT(false);
+    return false;
+}
+
+// On Mosh Textual port doesn't support position();
+bool TextualInputPort::hasPosition() const
+{
+    return false;
+}
+
+bool TextualInputPort::hasSetPosition() const
+{
+    return false;
+}
+
+
 ucs4string TextualInputPort::getStringAll()
 {
     ucs4string accum;
@@ -156,106 +182,3 @@ Object TextualInputPort::getDatum(bool& errorOccured)
 
 
 
-BasicTextualInputPort::BasicTextualInputPort(BinaryInputPort* port, Transcoder* coder)
-    : TextualInputPort(),
-      codec_(coder->codec().toCodec()),
-      port_(port),
-      transcoder_(coder),
-      buffer_(UC("")),
-      line_(1)
-{
-}
-
-BasicTextualInputPort::BasicTextualInputPort() : port_(NULL)
-{
-}
-
-BasicTextualInputPort::BasicTextualInputPort(const BasicTextualInputPort& o)
-{
-    MOSH_ASSERT(false);
-}
-
-int BasicTextualInputPort::getLineNo() const
-{
-    return line_;
-}
-
-
-BasicTextualInputPort::~BasicTextualInputPort()
-{
-    close();
-}
-
-// int BasicTextualInputPort::getU8()
-// {
-//     MOSH_ASSERT(port_);
-//     return port_->getU8();
-// }
-
-ucs4char BasicTextualInputPort::getChar()
-{
-    ucs4char c;
-    if (buffer_.empty()) {
-        c= codec_->in(port_);
-    } else {
-        c = buffer_[buffer_.size() - 1];
-        buffer_.erase(buffer_.size() - 1, 1);
-    }
-    if (c == '\n') ++line_;
-    return c;
-}
-
-void BasicTextualInputPort::unGetChar(ucs4char c)
-{
-    if (EOF == c) return;
-    buffer_ += c;
-}
-
-ucs4string BasicTextualInputPort::toString() {
-    return port_->toString();
-}
-
-
-int BasicTextualInputPort::close()
-{
-    if (NULL != port_) {
-        return port_->close();
-    } else {
-        return 0;
-    }
-}
-
-Transcoder* BasicTextualInputPort::transcoder() const
-{
-    return transcoder_;
-}
-
-Codec* BasicTextualInputPort::codec() const
-{
-    return codec_;
-}
-
-Object BasicTextualInputPort::position() const
-{
-    // caller should check hasPosition().
-    MOSH_ASSERT(false);
-    return Object::Undef;;
-}
-
-bool BasicTextualInputPort::setPosition(int position)
-{
-    // caller should check hasPosition().
-    MOSH_ASSERT(false);
-    return false;
-}
-
-// On Mosh BasicTextual port doesn't support position();
-bool BasicTextualInputPort::hasPosition() const
-{
-    return false;
-}
-
-bool BasicTextualInputPort::hasSetPosition() const
-{
-    return false;
-}
